# rgm

./: Cargo.toml  README.md
examples/: file_open.rs  git.rs  tree.rs
src/: app.rs  args.rs  error.rs  input.rs  logging.rs  main.rs  repo.rs  repoitem.rs  repoprinter.rs  repoview.rs  repoviewer.rs  screen.rs  sorting.rs  state.rs  utils.rs
