# cargo-features = ["edition2021"]

[package]
name = "rgm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://github.com/rust-lang/rust/issues/40787
#[profile.dev]
#split-debuginfo = "packed"

[dependencies]
crossterm = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1.3", features = ["derive"] }
walkdir = "2"
git2 = "0.13"
dirs = "4.0.0"
